Виконав пункт С3 в ТЗ

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="header-logo link" href="./index.html">Web<span class="part-of-logo">Studio</span></a>
         
           <ul class="header-list list">
-            <li class="header-list-item"><a class="header-list-link link" href="./index.html">Studio</a></li>
+            <li class="header-list-item"><a class="header-list-link link active-page" href="./index.html">Studio</a></li>
             <li class="header-list-item"><a class="header-list-link link" href="./portfolio.html">Portfolio</a></li>
             <li class="header-list-item"><a class="header-list-link link" href="">Contacts</a></li>
           </ul>
