--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             
                 <ul class="header-list list">
                     <li class="header-list-item"><a class="header-list-link link" href="./index.html">Studio</a></li>
-                    <li class="header-list-item"><a class="header-list-link link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="header-list-item"><a class="header-list-link link active-page" href="./portfolio.html">Portfolio</a></li>
                     <li class="header-list-item"><a class="header-list-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
