Пробна перша карточка

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,11 +55,19 @@
                 <ul class="result-list list">
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/banking-img.jpg" alt="Banking App Interface Concept" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Banking App Interface Concept</h2>
-                                    <p class="result-list-text">App</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/banking-img.jpg" alt="Banking App Interface Concept" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Banking App Interface Concept</h2>
+                                <p class="result-list-text">App</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
