--- a/portfolio.html
+++ b/portfolio.html
@@ -72,70 +72,134 @@
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/cashless-img.jpg" alt="Cashless Payment" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Cashless Payment</h2>
-                                    <p class="result-list-text">Marketing</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/cashless-img.jpg" alt="Cashless Payment" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Cashless Payment</h2>
+                                <p class="result-list-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/meditation-img.jpg" alt="Meditaion App" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Meditation App</h2>
-                                    <p class="result-list-text">App</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/meditation-img.jpg" alt="Meditaion App" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Meditation App</h2>
+                                <p class="result-list-text">App</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/taxi-img.jpg" alt="Taxi Service" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Taxi Service</h2>
-                                    <p class="result-list-text">Marketing</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/taxi-img.jpg" alt="Taxi Service" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Taxi Service</h2>
+                                <p class="result-list-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/scren-img.jpg" alt="Screen Illustrations" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Screen Illustrations</h2>
-                                    <p class="result-list-text">Design</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/scren-img.jpg" alt="Screen Illustrations" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Screen Illustrations</h2>
+                                <p class="result-list-text">Design</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/online-img.jpg" alt="Online Courses" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Online Courses</h2>
-                                    <p class="result-list-text">Marketing</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/online-img.jpg" alt="Online Courses" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Online Courses</h2>
+                                <p class="result-list-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/instagram-img.jpg" alt="Instagram Stories Concept" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Instagram Stories Concept</h2>
-                                    <p class="result-list-text">Design</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/instagram-img.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Instagram Stories Concept</h2>
+                                <p class="result-list-text">Design</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/organicfood-img.jpg" alt="Organic Food" width="360" height="300">
-                                <div class="portfolio-card-padding">
-                                    <h2 class="result-list-subtitle">Organic Food</h2>
-                                    <p class="result-list-text">Web Site</p>
-                                </div>
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/organicfood-img.jpg" alt="Organic Food" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                            <div class="portfolio-card-padding">
+                                <h2 class="result-list-subtitle">Organic Food</h2>
+                                <p class="result-list-text">Web Site</p>
+                            </div>
                         </a>
                     </li>
                     <li class="result-list-item">
                         <a class="result-link link" href="">
-                            <img src="./images/freshcoffe-img.jpg" alt="Fresh Coffee" width="360" height="300">
+                            <div class="result-fly-text-wrap">
+                                <img src="./images/freshcoffe-img.jpg" alt="Fresh Coffee" width="360" height="300">
+                                <p class="result-fly-text">
+                                    14 Stylish and User-Friendly App Design Concepts ·
+                                    Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
                             <div class="portfolio-card-padding">
                                 <h2 class="result-list-subtitle">Fresh Coffee</h2>
                                 <p class="result-list-text">Web Site</p>
