--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
     <main class="main">
         <section class="filter section">
             <div class="container">
-                <h1 class="filter-title" hidden>Our examples of works</h1>
+                <h1 class="filter-title visually-hidden">Our examples of works</h1>
                 <ul class="filter-list list">
                     <li class="filter-list-item"><button class="filter-list-btn" type="button">All</button></li>
                     <li class="filter-list-item"><button class="filter-list-btn" type="button">Web Site</button></li>
